@@ -1,3 +1,9 @@
+2005-07-06  Albert Chu  <chu11@llnl.gov>
+
+	* Continue work on cerebro-stat tool.
+
+	* Fix pthread stack size bug.
+	
 2005-07-05  Albert Chu  <chu11@llnl.gov>
 
 	* Begin work on cerebro-stat tool.
